api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_stream_status.snap
---
source: api/src/v1/serde_tests.rs
expression: val
---
{
  "id": "00000000-0000-0000-0000-000000000000",
  "running": true,
  "error": null,
  "video_and_stream": {
    "name": "Test Stream",
    "stream_information": {
      "endpoints": [
        "rtsp://0.0.0.0:8554/test"
      ],
      "configuration": {
        "type": "video",
        "encode": "H264",
        "height": 1080,
        "width": 1920,
        "frame_interval": {
          "numerator": 1,
          "denominator": 30
        }
      },
      "extended_configuration": {
        "thermal": true,
        "disable_mavlink": false,
        "disable_zenoh": false,
        "disable_thumbnails": false
      }
    },
    "video_source": {
      "Local": {
        "name": "USB Camera",
        "device_path": "/dev/video0",
        "type": {
          "Usb": "usb-0000:00:14.0-1"
        }
      }
    }
  },
  "mavlink": {
    "system_id": 1,
    "component_id": 100
  }
}
