api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_v4l_control.snap
---
source: api/src/v1/serde_tests.rs
expression: "V4lControl { device: \"/dev/video0\".into(), v4l_id: 42, value: 128, }"
---
{
  "device": "/dev/video0",
  "v4l_id": 42,
  "value": 128
}
