api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_video_and_stream_information.snap
---
source: api/src/v1/serde_tests.rs
expression: sample_video_and_stream_information()
---
{
  "name": "Test Stream",
  "stream_information": {
    "endpoints": [
      "rtsp://0.0.0.0:8554/test"
    ],
    "configuration": {
      "type": "video",
      "encode": "H264",
      "height": 1080,
      "width": 1920,
      "frame_interval": {
        "numerator": 1,
        "denominator": 30
      }
    },
    "extended_configuration": {
      "thermal": true,
      "disable_mavlink": false,
      "disable_zenoh": false,
      "disable_thumbnails": false
    }
  },
  "video_source": {
    "Local": {
      "name": "USB Camera",
      "device_path": "/dev/video0",
      "type": {
        "Usb": "usb-0000:00:14.0-1"
      }
    }
  }
}
