api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_video_capture_configuration.snap
---
source: api/src/v1/serde_tests.rs
expression: sample_video_capture_configuration()
---
{
  "encode": "H264",
  "height": 1080,
  "width": 1920,
  "frame_interval": {
    "numerator": 1,
    "denominator": 30
  }
}
