api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_video_source_gst.snap
---
source: api/src/v1/serde_tests.rs
expression: sample_video_source_gst()
---
{
  "name": "Fake source",
  "source": {
    "Fake": "videotestsrc"
  }
}
