api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_video_source_redirect.snap
---
source: api/src/v1/serde_tests.rs
expression: sample_video_source_redirect()
---
{
  "name": "RTSP Redirect",
  "source": {
    "Redirect": "rtsp://192.168.1.200:554/stream"
  }
}
