api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_video_source_type_gst.snap
---
source: api/src/v1/serde_tests.rs
expression: "VideoSourceType::Gst(sample_video_source_gst())"
---
{
  "Gst": {
    "name": "Fake source",
    "source": {
      "Fake": "videotestsrc"
    }
  }
}
