api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_video_source_type_local.snap
---
source: api/src/v1/serde_tests.rs
expression: "VideoSourceType::Local(sample_video_source_local())"
---
{
  "Local": {
    "name": "USB Camera",
    "device_path": "/dev/video0",
    "type": {
      "Usb": "usb-0000:00:14.0-1"
    }
  }
}
